correcciones responsivas de paginas de bootstrap, proyecto terminado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     instalación de camaras de seguridad, mantenimiento general, actualización de gps. Todo esto ofrecemos en TECH912">
     <meta name="keywords" content="TECH, PC, COMPUTADORA, NOTEBOOK, SERVICIO TECNICO, INFORMATICA, REDES">
     <title>Inicio</title>
+    <link rel="shortcut icon" href="photos/favicontech.png">
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 
@@ -64,6 +65,10 @@
             <div class="grid-item">VISITAS A DOMICILIO</div>
             <div class="grid-item">PRESUPUESTO SIN CARGO</div>
         </div>
+    </section>
+    <section class="fondo_botones">
+        <button> <a href="pages/Nosotros.html">CONOCENOS MAS</a></button>
+        <button> <a href="pages/Contacto.html">CONTACTANOS</a></button>
     </section>
     <footer>
         <div class="fondo_copyright">
