--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="shortcut icon" href="../photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
 </head>
+
 <body>
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
     <nav>
@@ -19,49 +21,48 @@
             <a href="Contacto.html">CONTACTO</a>
         </div>
     </nav>
-<hr>
-<h1>CONTACTANOS</h1> 
+    <hr>
+    <h1>CONTACTANOS</h1>
     <section class="contacto1">
-        <div class="contacto1__contact"> LLÁMENOS A ESTE NÚMERO DENTRO DE NUESTRO HORARIO DE ATENCIÓN, SE COMUNICARÁ CON NUESTRA SEDE CENTRAL. 
-    </div>
+        <div class="contacto1__contact"> LLÁMENOS A ESTE NÚMERO DENTRO DE NUESTRO HORARIO DE ATENCIÓN, SE COMUNICARÁ CON
+            NUESTRA SEDE CENTRAL.
+        </div>
         <div class="telefono"><img src="../photos/telephone.png" alt="telefono">4921-8430
-    </div>
+        </div>
         <div class="redes"> NUESTRAS REDES SOCIALES
-    </div> 
+        </div>
         <div class="fbig"> <img src="../photos/facebook.png" alt="fb"> TECH912 <br> <br>
-        <img src="../photos/instagram.png" alt="ig"> TECH912
-    </div>
-        <div class="mail"> EMAIL 
-    </div>
+            <img src="../photos/instagram.png" alt="ig"> TECH912
+        </div>
+        <div class="mail"> EMAIL
+        </div>
         <div class="correo"> <img src="../photos/correo.png" alt="correo">SERVICIO.TECH.912@GMAIL.COM
-    </div>
-</div> 
-
-    <div class="contacto1__form">
-        <form>
-            <label for="name">Nombre</label> <br> 
-            <input type="text" id="name"> <br> 
-            <label for="email">Email</label> <br> 
-            <input type="email" id="email"> <br> <br>
-            <label for="consulta">Dejanos tu consulta</label> <br> 
-            <textarea id="consulta" cols="30" rows="10"></textarea> <br> <br>
-            <input type="submit" id="botonenviar" value="Enviar">
-        </form>
-    </div>
-</section>
-<footer>
-    <div class="fondo_copyright">
-        <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
-        <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
-        <div class="irarriba"> <a href="Contacto.html"> Ir arriba ↑</a></div>
-        <div class="copyright">© Copyright 2022 |</div>
-    </div>
-    <div class="fondo_lasttext">
-        <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+        </div>
+        </div>
+        <div class="contacto1__form">
+            <form>
+                <label for="name">Nombre</label> <br>
+                <input type="text" id="name"> <br>
+                <label for="email">Email</label> <br>
+                <input type="email" id="email"> <br> <br>
+                <label for="consulta">Dejanos tu consulta</label> <br>
+                <textarea id="consulta" cols="30" rows="10"></textarea> <br> <br>
+                <input type="submit" id="botonenviar" value="Enviar">
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="fondo_copyright">
+            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="Contacto.html"> Ir arriba ↑</a></div>
+            <div class="copyright">© Copyright 2022 |</div>
+        </div>
+        <div class="fondo_lasttext">
+            <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
             </div>
-        <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
-    </div>
-
-</footer>
-    </body>
-    </html
+            <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
+        </div>
+    </footer>
+</body>
+</html
