--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilo/estilo.css">
     <title>Nosotros</title>
+    <link rel="shortcut icon" href="../photos/favicontech.png">
 </head>
 
 <body>
@@ -27,37 +28,53 @@
     <section class="nosotros1">
         <h3>¿QUIÉNES SÓMOS? </h3>
         <hr>
-        <div class="nosotros1_parrafo"> Somos <strong>TECH912</strong>, una empresa de servicio técnico </div> <br>
+        <div class="nosotros1_parrafo">
+            Somos <strong>TECH912</strong>, una empresa de servicio técnico que desarrolla un trabajo
+            profesional de acuerdo a las necesidades de nuestros clientes. Nos caracterizamos por la calidad
+            y el profesionalismo con el que trabajamos.
+        </div> <br>
         <hr>
         <h3>¿POR QUÉ ELEGIRNOS?</h3>
-        <div class="nosotros1_parrafo_dos"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati magni
-            architecto dolores voluptate nemo tenetur nulla, distinctio repellendus inventore, laboriosam adipisci quam
-            fugit quos similique expedita molestiae unde porro optio.</div>
+        <div class="nosotros1_parrafo"> Nuestra actividad comenzo en el año 2002. Contamos con 20 años
+            de experiencia en el rubro que nos convierte en lideres en el servicio técnico informático.
+            Nuestra amplia cantidad de servicios que ofrecemos nos hace una de las empresas mas buscadas
+            en la ciudad. Nos mantenemos informados sobre nuevas tecnologías y siempre estamos buscando nuevos
+            servicios que ofrecer.
+        </div>
     </section>
 
     <div class="nosotros2">
-        <div class="caja"> 
+        <div class="caja">
             <img src="../photos/it.png" alt="">
             <h4>Servicio técnico a domicilio</h4>
-            <div class="container_parrafo"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, voluptatem tenetur debitis, aperiam dolore
-                architecto dignissimos id minus officiis neque dolorum quaerat ratione eius quisquam corporis deserunt
-                itaque at modi.</p></div>
+            <div class="container_parrafo">
+                <p>"Ofrecemos un servicio técnico a domicilio para resolver sus
+                    problemas de manera rápida y eficaz. Cualquier duda que tenga nuestros técnicos no tardaran
+                    nada en llegar al domicilio"
+                </p>
+            </div>
         </div>
-    <div class="caja"> 
-        <img src="../photos/local.png" alt=""> 
-        <h4>Local al público</h4>
-        <div class="container_parrafo"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, voluptatem tenetur debitis, aperiam dolore
-            architecto dignissimos id minus officiis neque dolorum quaerat ratione eius quisquam corporis deserunt
-            itaque at modi.</p></div>
+        <div class="caja">
+            <img src="../photos/local.png" alt="">
+            <h4>Local al público</h4>
+            <div class="container_parrafo">
+                <p>"Nuestros locales ofrecen gran variedad de insumos, productos de calidad
+                    y precios bajos. Serán recibidos con la mejor atención para que podamos despejar sus dudas e
+                    inconvenientes"
+                </p>
+            </div>
+        </div>
+        <div class="caja">
+            <img src="../photos/cash.png" alt="">
+            <h4>Presupuesto sin cargo</h4>
+            <div class="container_parrafo">
+                <p>"No dude en consultarnos por un presupuesto sobre cualquier servicio.
+                    Ofrecemos planes de pago donde se brinda un mantenimiento de sus equipos y sus redes todos los
+                    meses.
+                </p>
+            </div>
+        </div>
     </div>
-    <div class="caja"> 
-        <img src="../photos/cash.png" alt="">
-        <h4>Presupuesto sin cargo</h4>
-        <div class="container_parrafo"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, voluptatem tenetur debitis, aperiam dolore
-            architecto dignissimos id minus officiis neque dolorum quaerat ratione eius quisquam corporis deserunt
-            itaque at modi.</p></div>
-    </div>
-</div>
 
     <footer>
         <div class="fondo_copyright">
