--- a/pages/Servicios.html
+++ b/pages/Servicios.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <head id="Servicios.html"></head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
+    <link rel="shortcut icon" href="../photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
 </head>
+
 <body>
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
     <nav>
@@ -18,64 +22,63 @@
             <a href="Ubicación.html">UBICACIÓN</a>
             <a href="Contacto.html">CONTACTO</a>
         </div>
-    </nav> 
-<hr>
-<h1>TU CONFIANZA, NUESTRA GARANTÍA</h1>
-<section class="servicios1">
-    <h3> OFRECEMOS UNA GRAN CANTIDAD DE SERVICIOS</h3> <hr> 
-        <div class="servicios1__texto"> Contar con un servicio técnico acorde a sus necesidades le garantiza el mejor rendimiento de sus computadoras y con nuestro mantenimiento general
-            le evitamos posibles fallas. Resolvemos problemas, y evitamos problemas. </div> <hr>
+    </nav>
+    <hr>
+    <h1>TU CONFIANZA, NUESTRA GARANTÍA</h1>
+    <section class="servicios1">
+        <h3> OFRECEMOS UNA GRAN CANTIDAD DE SERVICIOS</h3>
+        <hr>
+        <div class="servicios1__texto"> Contar con un servicio técnico acorde a sus necesidades le garantiza el mejor
+            rendimiento de sus computadoras y con nuestro mantenimiento general
+            le evitamos posibles fallas. Resolvemos problemas, y evitamos problemas. </div>
+        <hr>
         <h3>SERVICIOS A PARTICULARES Y A EMPRESAS</h3>
-</section>
-<section class="fondoservicios">
-    <ul>
-        <div class="listas">
-            <li class="li1">Reparación y mantenimiento de PC y notebook</li>
-            <li class="li2">Venta de PC</li>
-            <li class="li3">Armado de PC</li>
-            <li class="li4">Reparación de impresoras</li>
-            <li class="li5">Soporte de redes</li>
-            <li class="li6">Venta de insumos de informática</li>
-            <li class="li7">Instalación de camaras de seguridad</li>
-            <li class="li8">Actualizaciones de sistemas</li>
-            <li class="li9">Actualización de GPS</li>
-        </div>
-    </ul>
-    <div class="ocultar_div">
-    <div id="slider">
-        <div class="foto_slide">
-            <img src="../photos/pcgamer2.jpg" alt="slide1" />
-        </div>
-        <div class="foto_slide">
-            <img src="../photos/fotoserv1.jpg" alt="slide2" />
-        </div>
-        <div class="foto_slide">
-            <img src="../photos/fotoserv3.jpg" alt="slide3" />
-        </div>
-        <div class="foto_slide">
-            <img src="../photos/camaraseguridad.jpg" alt="slide4" />
-        </div>
-        </div>
-    </div>
     </section>
-
-
-<br><br>
-
-
-<footer>
-    <div class="fondo_copyright">
-        <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
-        <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
-        <div class="irarriba"> <a href="Servicios.html"> Ir arriba ↑</a></div>
-        <div class="copyright">© Copyright 2022 |</div>
-    </div>
-    <div class="fondo_lasttext">
-        <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+    <section class="fondoservicios">
+        <ul>
+            <div class="listas">
+                <li class="li1">Reparación y mantenimiento de PC y notebook</li>
+                <li class="li2">Venta de PC</li>
+                <li class="li3">Armado de PC</li>
+                <li class="li4">Reparación de impresoras</li>
+                <li class="li5">Soporte de redes</li>
+                <li class="li6">Venta de insumos de informática</li>
+                <li class="li7">Instalación de camaras de seguridad</li>
+                <li class="li8">Actualizaciones de sistemas</li>
+                <li class="li9">Actualización de GPS</li>
             </div>
-        <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
-    </div>
+        </ul>
+        <div class="ocultar_div">
+            <div id="slider">
+                <div class="foto_slide">
+                    <img src="../photos/pcgamer2.jpg" alt="slide1" />
+                </div>
+                <div class="foto_slide">
+                    <img src="../photos/fotoserv1.jpg" alt="slide2" />
+                </div>
+                <div class="foto_slide">
+                    <img src="../photos/fotoserv3.jpg" alt="slide3" />
+                </div>
+                <div class="foto_slide">
+                    <img src="../photos/camaraseguridad.jpg" alt="slide4" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="fondo_copyright">
+            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="Servicios.html"> Ir arriba ↑</a></div>
+            <div class="copyright">© Copyright 2022 |</div>
+        </div>
+        <div class="fondo_lasttext">
+            <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+            </div>
+            <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
+        </div>
 
-</footer>
-    </body>
-    </html>
+    </footer>
+</body>
+
+</html>
