--- a/pages/Term.html
+++ b/pages/Term.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terminos y condiciones</title>
+    <title>Términos y condiciones</title>
+    <link rel="shortcut icon" href="../photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
@@ -17,23 +18,27 @@
     <nav>
         <div class="menu">
             <div class="container">
-                <div class="d-flex justify-content-between justify-content-sm-center">
-                    <div class="col-auto"><a class="align-self-center" href="../index.html">INICIO</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Servicios.html">SERVICIOS</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Nosotros.html">NOSOTROS</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Ubicación.html">UBICACIÓN</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Contacto.html">CONTACTO</a></div>
+                <div class="row justify-content-between justify-content-sm-center">
+                    <div class="col-md-2 col-auto "><a href="../index.html" class="text-align-center">INICIO</a></div>
+                    <div class="col-md-2 col-auto "><a href="Servicios.html" class="text-align-center">SERVICIOS</a>
+                    </div>
+                    <div class="col-md-2 col-auto "><a href="Nosotros.html" class="text-align-center">NOSOTROS</a></div>
+                    <div class="col-md-2 col-auto "><a href="Ubicación.html" class="text-align-center">UBICACIÓN</a>
+                    </div>
+                    <div class="col-md-2 col-auto "><a href="Contacto.html" class="text-align-center">CONTACTO</a></div>
                 </div>
             </div>
+        </div>
     </nav>
     <div class="terms">
-        <h3 class="border-bottom border-light">TERMINOS Y CONDICIONES</h3>
+        <h3 class="border-bottom border-light">TÉRMINOS Y CONDICIONES</h3>
         <p class="d-flex text-align-center col-auto fs-6">
             Nuestro sitio web podrá recoger información personal por ejemplo: Nombre, información de contacto como su
             dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser
             requerida información específica para procesar algún pedido o realizar una entrega o facturación. </p>
-            <p class="badge badge-dark ml-3"> Uso de la información recogida </p> <br>
-            <p class="d-flex text-align-center col-auto">Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible,
+        <p class="badge badge-dark ml-3"> Uso de la información recogida </p> <br>
+        <p class="d-flex text-align-center col-auto">Nuestro sitio web emplea la información con el fin de proporcionar
+            el mejor servicio posible,
             particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros
             productos y servicios. Es posible que sean enviados correos electrónicos periódicamente a través de nuestro
             sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante
@@ -42,43 +47,54 @@
 
             Tech24 está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos
             los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no
-            autorizado. </p> 
-            <div class="">
-                <a class="btn btn-primary" role="button" href="#collapse1" data-bs-toggle="collapse" aria-controls="collapse1" aria-expanded="false">Leer más</a>
-            </div>
-            <div class="collapse" id="collapse1">
-            <p class="badge badge-dark ml-3">Cookies </p> <br> 
+            autorizado. </p>
+        <div class="leermas">
+            <a class="btn btn-primary" role="button" href="#collapse1" data-bs-toggle="collapse"
+                aria-controls="collapse1" aria-expanded="false">Leer más</a>
+        </div>
+        <div class="collapse" id="collapse1">
+            <p class="badge badge-dark ml-3">Cookies </p> <br>
 
-            <p class="d-flex text-align-center col-auto"> Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia.
-            Esta información es empleada únicamente para análisis estadístico y después la información se elimina de
-            forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las
-            cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su
-            ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente, visitas a una web.
-            Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies
-            automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de
-            su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros
-            servicios.  </p>
+            <p class="d-flex text-align-center col-auto"> Nuestro sitio web emplea las cookies para poder identificar
+                las páginas que son visitadas y su frecuencia.
+                Esta información es empleada únicamente para análisis estadístico y después la información se elimina de
+                forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo
+                las
+                cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de
+                su
+                ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente, visitas a una
+                web.
+                Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies
+                automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la
+                configuración de
+                su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de
+                nuestros
+                servicios. </p>
 
             <p class="badge badge-dark ml-3"> Control de su información personal </p> <br>
 
-            <p class="d-flex text-align-center col-auto"> En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es
-            proporcionada a nuestro sitio web. Cada vez que se le solicite rellenar un formulario, como el de alta de
-            usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico. En caso de que
-            haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.
+            <p class="d-flex text-align-center col-auto"> En cualquier momento usted puede restringir la recopilación o
+                el uso de la información personal que es
+                proporcionada a nuestro sitio web. Cada vez que se le solicite rellenar un formulario, como el de alta
+                de
+                usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico. En caso de
+                que
+                haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier
+                momento.
 
-            Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su
-            consentimiento, salvo que sea requerido por un juez con un orden judicial.
+                Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su
+                consentimiento, salvo que sea requerido por un juez con un orden judicial.
 
-            TECH912 Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier
-            momento. </p>
+                TECH912 Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier
+                momento. </p>
         </div>
     </div>
 
     <footer>
         <div class="fondo_copyright h-25">
-            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="term"><a href="Term.html"> Términos y condiciones </a></div>
             <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
-            <div class="irarriba"> <a href="Politic.html"> Ir arriba ↑</a></div>
+            <div class="irarriba"> <a href="Term.html"> Ir arriba ↑</a></div>
             <div class="copyright">© Copyright 2022 |</div>
         </div>
         <div class="fondo_lasttext h-25">
@@ -90,6 +106,5 @@
     </footer>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </html>
