--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <head id="Ubicación.html"></head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ubicación</title>
+    <link rel="shortcut icon" href="../photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
 </head>
+
 <body>
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
-    <nav> 
+    <nav>
         <div class="menu">
             <a href="../index.html">INICIO</a>
             <a href="Servicios.html">SERVICIOS</a>
@@ -18,35 +22,50 @@
             <a href="Ubicación.html">UBICACIÓN</a>
             <a href="Contacto.html">CONTACTO</a>
         </div>
-    </nav> 
-<hr>
+    </nav>
+    <hr>
     <h1>¿DONDE ESTÁMOS?</h1>
     <section class="fondo_ubi">
-        <h5> NOS SEGUIMOS EXPANDIENDO...</h5> <hr>
-        <div class="textoubi1"> Comenzamos en el barrio de Parque Chacabuco CABA, donde actualmente rige nuestra sede central. 
-        De a poco fuimos creciendo y expandiendonos abriendo dos locales mas en la zona de Caballito y luego en Villa del Parque.
-        Proximamente abriremos dos locales mas, en la localidad de San Isidro y en San Martín. La expansión no para.</div> <hr>
-        
-        <div class="textoubi2"> 
-            <a href="https://www.google.com/maps?q=Zelarray%C3%A1n+1740,+C1406IJF+CABA&ftid=0x95bccbb7d7f9198b:0x3baa1420e0deac22" target="_blank"><img src="../photos/location.png" class="ubi1" alt="ubicacion1"></a> Zelarrayán 1740 <br>
-            <a href="https://www.google.com/maps/dir//-34.6190418,-58.4337618" target="_blank"><img src="../photos/location.png" class="ubi2" alt="ubicacion2"></a> Rosario 472 <br>
-            <a href="https://www.google.com/maps/dir//-34.6037806,-58.4878306/@-34.6041511,-58.5576121,12z" target="_blank"><img src="../photos/location.png" class="ubi3"  alt="ubicacion3"></a> Nazca 2785 <br>
-                    <img src="../photos/clock.png" alt="reloj"><italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic></div> 
-        <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" id="iframe" width="450" height="350"> </div></iframe> <hr>
+        <h5> NOS SEGUIMOS EXPANDIENDO...</h5>
+        <hr>
+        <div class="textoubi1"> Comenzamos en el barrio de Parque Chacabuco CABA, donde actualmente rige nuestra sede
+            central.
+            De a poco fuimos creciendo y expandiendonos abriendo dos locales mas en la zona de Caballito y luego en
+            Villa del Parque.
+            Proximamente abriremos dos locales mas, en la localidad de San Isidro y en San Martín. La expansión no para.
+        </div>
+        <hr>
+
+        <div class="textoubi2">
+            <a href="https://www.google.com/maps?q=Zelarray%C3%A1n+1740,+C1406IJF+CABA&ftid=0x95bccbb7d7f9198b:0x3baa1420e0deac22"
+                target="_blank"><img src="../photos/location.png" class="ubi1" alt="ubicacion1"></a> Zelarrayán 1740
+            <br>
+            <a href="https://www.google.com/maps/dir//-34.6190418,-58.4337618" target="_blank"><img
+                    src="../photos/location.png" class="ubi2" alt="ubicacion2"></a> Rosario 472 <br>
+            <a href="https://www.google.com/maps/dir//-34.6037806,-58.4878306/@-34.6041511,-58.5576121,12z"
+                target="_blank"><img src="../photos/location.png" class="ubi3" alt="ubicacion3"></a> Nazca 2785 <br>
+            <img src="../photos/clock.png" alt="reloj">
+            <italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic>
+        </div>
+        <div class="map"><iframe
+                src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" id="iframe"
+                width="450" height="350"> </div></iframe>
+        <hr>
     </section>
     <footer>
         <div class="fondo_copyright">
-            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="term"><a href="Term.html"> Términos y condiciones </a></div>
             <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
             <div class="irarriba"> <a href="Ubicación.html"> Ir arriba ↑</a></div>
             <div class="copyright">© Copyright 2022 |</div>
         </div>
         <div class="fondo_lasttext">
             <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
-                </div>
+            </div>
             <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
         </div>
-    
+
     </footer>
-    </body>
-    </html
+</body>
+
+</html
