--- a/pages/Politic.html
+++ b/pages/Politic.html
@@ -8,8 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de privacidad</title>
+    <link rel="shortcut icon" href="../photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
@@ -17,14 +21,17 @@
     <nav>
         <div class="menu">
             <div class="container">
-                <div class="d-flex justify-content-between justify-content-sm-center">
-                    <div class="col-auto"><a class="align-self-center" href="../index.html">INICIO</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Servicios.html">SERVICIOS</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Nosotros.html">NOSOTROS</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Ubicación.html">UBICACIÓN</a></div>
-                    <div class="col-auto"><a class="align-self-center" href="Contacto.html">CONTACTO</a></div>
+                <div class="row justify-content-between justify-content-sm-center">
+                    <div class="col-md-2 col-auto"><a href="../index.html" class="text-align-center">INICIO</a></div>
+                    <div class="col-md-2 col-auto"><a href="Servicios.html" class="text-align-center">SERVICIOS</a>
+                    </div>
+                    <div class="col-md-2 col-auto"><a href="Nosotros.html" class="text-align-center">NOSOTROS</a></div>
+                    <div class="col-md-2 col-auto"><a href="Ubicación.html" class="text-align-center">UBICACIÓN</a>
+                    </div>
+                    <div class="col-md-2 col-auto"><a href="Contacto.html" class="text-align-center">CONTACTO</a></div>
                 </div>
             </div>
+        </div>
     </nav>
 
     <div class="index1 pb-3">
@@ -36,7 +43,8 @@
             llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando
             que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad
             puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente
-            esta página para asegurarse que está de acuerdo con dichos cambios. Tech912 Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier
+            esta página para asegurarse que está de acuerdo con dichos cambios. Tech912 Se reserva el derecho de cambiar
+            los términos de la presente Política de Privacidad en cualquier
             momento.
         </div>
     </div>
@@ -55,8 +63,5 @@
         </div>
     </footer>
 </body>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 
 </html>
