--- a/pages/Term.html
+++ b/pages/Term.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="../photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
