fix rutas logo footer

--- a/pages/Term.html
+++ b/pages/Term.html
@@ -103,7 +103,7 @@
         <div class="fondo_lasttext h-25">
             <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
             </div>
-            <div class="logosmall mb-2"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a>
+            <div class="logosmall mb-2"><a href="../index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a>
             </div>
         </div>
     </footer>
