--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -62,7 +62,7 @@
         <div class="fondo_lasttext">
             <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
             </div>
-            <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
+            <div class="logosmall"><a href="../index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
         </div>
 
     </footer>
