--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-
-    <head id="index.html"></head>
     <meta charset="UTF-8">
+    <head id="index.html"></head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina web dedicada al rubro de la tecnologia. Reparación de equipos, venta de insumos
@@ -13,6 +12,7 @@
     <title>Inicio</title>
     <link rel="shortcut icon" href="photos/favicontech.png">
     <link rel="stylesheet" href="estilo/estilo.css">
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
