agregado de carrito js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Inicio</title>
     <link rel="shortcut icon" href="photos/favicontech.png">
     <link rel="stylesheet" href="estilo/estilo.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/script.js"></script>
 </head>
 
