--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <head id="index.html"></head>
     <meta charset="UTF-8">
+    <head id="index.html"></head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina web dedicada al rubro de la tecnologia. Reparación de equipos, venta de insumos
@@ -10,7 +10,8 @@
     <meta name="keywords" content="TECH, PC, COMPUTADORA, NOTEBOOK, SERVICIO TECNICO, INFORMATICA, REDES">
     <link rel="shortcut icon" href="photos/favicontech.png">
     <link rel="stylesheet" href="../estilo/estilo.css">
-    <script src="./js/script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Comprá tu PC</title>
 </head>
 <body>
@@ -29,6 +30,41 @@
     </nav>
     <hr>
 
+    <main>
+        <div id="container-general">
+            <section id="section-paquetes">
+                <div class="card-paquete"> <div class="img-container">
+                            <img src="/photos/1g.jpg" alt="Pc Oficina" class="img-paquete">
+                            </div>
+                            <div class="info-paquete">
+                            <p class="font">Pc Oficina Celeron G5950 4GB RAM</p>
+                            <strong class="font">$37000</strong>
+                            <button class="boton" id="btn1"> Agregar al carrito </button>
+                            </div></div><div class="card-paquete"> <div class="img-container">
+                            <img src="/photos/2g.png" alt="Pc Gamer" class="img-paquete">
+                            </div>
+                            <div class="info-paquete">
+                            <p class="font">Pc Gamer Ryzen5 5650 8GB RAM + Radeon Vega </p>
+                            <strong class="font">$70000</strong>
+                            <button class="boton" id="btn2"> Agregar al carrito </button>
+                            </div></div><div class="card-paquete"> <div class="img-container">
+                            <img src="/photos/3g.png" alt="Pc Gamer Elite" class="img-paquete">
+                            </div>
+                            <div class="info-paquete">
+                            <p class="font">Pc Gamer Elite I7-10700k 16GB RAM + Nvdia 2060GTI</p>
+                            <strong class="font">$135000</strong>
+                            <button class="boton" id="btn3"> Agregar al carrito </button>
+                            </div></div><div class="card-paquete"> <div class="img-container">
+                            <img src="/photos/4g.jpg" alt="Pc Gamer Extreme" class="img-paquete">
+                            </div>
+                            <div class="info-paquete">
+                            <p class="font">Pc Gamer Extreme i9-10770k 32GB RAM + Nvidia 3060</p>
+                            <strong class="font">$265000</strong>
+                            <button class="boton" id="btn4"> Agregar al carrito </button>
+                            </div></div></section>
+            <section id="section-carrito">
+    </main>
+
     <footer>
         <div class="fondo_copyright">
             <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
@@ -43,6 +79,8 @@
         </div>
 
     </footer>
-    
+    <script src="../js/paquetes.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
