agregue link productos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+    <div class="containerbarraup">
+        <div class="barraup">  <a href="pages/Productos.html">PRODUCTOS </a> <img src="photos/carrito-de-compras.png" class="carrito" alt="carro"> <img src="photos/acceso.png" class="log" alt="acceso"</div>
+        
     <div class="fotologo"><img src="photos/fotologo.png" alt="fotologo" id="fotologo"></div>
     <nav>
         <div class="menu">
