--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
     </section>
     <section class="fondo_botones">
-        <button> <a href="pages/Nosotros.html">CONOCENOS MAS</a></button>
-        <button> <a href="pages/Contacto.html">CONTACTANOS</a></button>
+        <button class="botton"> <a href="pages/Nosotros.html">CONOCENOS MAS</a></button>
+        <button class="botton"> <a href="pages/Contacto.html">CONTACTANOS</a></button>
     </section>
     <footer>
         <div class="fondo_copyright">
